# Goat-Farming-Financial-Model

./: README.md  pyproject.toml  streamlit_app.py
docs/: commercial_refactor_note.md  improvement_recommendations.md
src/goat_financial_model/: __init__.py  advanced.py  assumption_bundle.py  cli.py  commercial_services.py  editor_registry.py  goat_model.py  pricing_engine.py  reporting.py  scenario_runner.py  table_registry.py
src/goat_financial_model/pages/: __init__.py  assumptions_page.py  input_schedule_page.py  results_page.py
tests/: test_dashboard_defaults.py  test_model_integration.py  test_refactor_modules.py  test_reporting_exports.py  test_streamlit_hero.py
