[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goat-financial-model"
version = "0.1.0"
description = "Helpers for extracting a goat farming financial model from Excel"
authors = [{name = "Goat Farmers United"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.32",
]

[project.scripts]
goat-model = "goat_financial_model.cli:main"
