[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goat-financial-model"
version = "0.1.0"
description = "Helpers for modelling goat farming finances from manual schedules"
authors = [{name = "Goat Farmers United"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.32",
    "XlsxWriter>=3.1",
]

[project.scripts]
goat-model = "goat_financial_model.cli:main"
